--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body { 
+        @apply font-lato
+    }
+}
+
+h1,h2,h3,h4,h5,h6 {
+    @apply font-montserrat font-bold uppercase
+}
+
