--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 @layer base {
-    body { 
-        @apply font-lato
-    }
+  body {
+    @apply font-lato;
+  }
 }
 
-h1,h2,h3,h4,h5,h6 {
-    @apply font-montserrat font-bold uppercase
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-montserrat font-bold uppercase;
 }
 
